--- a/package.json
+++ b/package.json
@@ -41,15 +41,16 @@
     "@radix-ui/react-tooltip": "^1.2.3",
     "@reduxjs/toolkit": "^2.7.0",
     "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
-    "framer-motion": "^12.7.4",
+    "framer-motion": "^12.9.2",
     "input-otp": "^1.2.4",
-    "lucide-react": "^0.501.0",
+    "lucide-react": "^0.503.0",
     "motion": "^12.6.5",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -63,6 +64,7 @@
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
     "zod": "^3.23.8"
