--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^12.19.1",
     "input-otp": "^1.2.4",
+    "lenis": "^1.3.4",
     "lucide-react": "^0.503.0",
     "motion": "^12.6.5",
     "next-themes": "^0.3.0",
