--- a/package.json
+++ b/package.json
@@ -49,11 +49,13 @@
     "cmdk": "^1.1.1",
     "danfojs": "^1.2.0",
     "date-fns": "^3.6.0",
+    "dompurify": "^3.2.6",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^12.23.6",
     "input-otp": "^1.2.4",
     "lenis": "^1.3.4",
     "lucide-react": "^0.503.0",
+    "marked": "^16.1.1",
     "motion": "^12.6.5",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
