--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "date-fns": "^3.6.0",
     "dompurify": "^3.2.6",
     "embla-carousel-react": "^8.3.0",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.23.6",
     "input-otp": "^1.2.4",
     "lenis": "^1.3.4",
