--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.40.0",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.4",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -67,6 +68,7 @@
     "react-hook-form": "^7.56.0",
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.3",
+    "react-router": "^7.8.0",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
