Installed datadog and its environment variables

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,7 @@
 VITE_RYZR_API_URL="https://ryzr-be-cwacd8a5c6c8d7bd.francecentral-01.azurewebsites.net"
 VITE_CLERK_PUBLISHABLE_KEY="pk_live_Y2xlcmsucnl6ci5pbyQ"
+NODE_ENV=production
+
+# DATA DOG
+VITE_DATADOG_APPLICATION_ID=df998c2d-41fd-49b1-b77a-6270ce6a9042
+VITE_DATADOG_CLIENT_TOKEN=pub34ef0f0bb15647c25d430a12636ea155
