--- a/package.json
+++ b/package.json
@@ -79,6 +79,9 @@
     "vaul": "^0.9.3",
     "zod": "^3.23.8"
   },
+  "overrides": {
+    "react-router": "^6.26.2"
+  },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tailwindcss/line-clamp": "^0.4.4",
