Updated datadog with new credentials

--- a/.env.production
+++ b/.env.production
@@ -2,5 +2,6 @@ VITE_RYZR_API_URL="https://ryzr-be-cwacd8a5c6c8d7bd.francecentral-01.azurewebsit
 VITE_CLERK_PUBLISHABLE_KEY="pk_live_Y2xlcmsucnl6ci5pbyQ"
 
 # DATA DOG
-VITE_DATADOG_APPLICATION_ID=df998c2d-41fd-49b1-b77a-6270ce6a9042
-VITE_DATADOG_CLIENT_TOKEN=pub34ef0f0bb15647c25d430a12636ea155
+VITE_DATADOG_APPLICATION_ID=6d271e94-a399-427c-9a32-7dad04eb5a57
+VITE_DATADOG_CLIENT_TOKEN=pub4fb861eaf633e3085ddc625d665c3880
+VITE_DATADOG_SITE=datadoghq.eu
