--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.6",
+    "html2pdf.js": "^0.12.1",
     "input-otp": "^1.2.4",
     "lenis": "^1.3.4",
     "lucide-react": "^0.503.0",
