--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@reduxjs/toolkit": "^2.7.0",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-table": "^8.21.3",
+    "@types/react-google-recaptcha": "^2.1.9",
     "axios": "^1.8.4",
     "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
@@ -68,6 +69,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.56.0",
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^2.1.3",
