added the test key for captcha check

--- a/.env.production
+++ b/.env.production
@@ -5,3 +5,5 @@ VITE_CLERK_PUBLISHABLE_KEY="pk_live_Y2xlcmsucnl6ci5pbyQ"
 VITE_DATADOG_APPLICATION_ID=6d271e94-a399-427c-9a32-7dad04eb5a57
 VITE_DATADOG_CLIENT_TOKEN=pub4fb861eaf633e3085ddc625d665c3880
 VITE_DATADOG_SITE=datadoghq.eu
+
+VITE_RECAPTCHA_SITE_KEY=6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
